--- a/AC-iOS-GeneralKnowledgeQuiz/AC-iOS-GeneralKnowledgeQuiz/Base.lproj/Main.storyboard
+++ b/AC-iOS-GeneralKnowledgeQuiz/AC-iOS-GeneralKnowledgeQuiz/Base.lproj/Main.storyboard
@@ -1,24 +1,144 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XVA-DB-wUo">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="kq1-uQ-qgW">
+            <objects>
+                <navigationController id="XVA-DB-wUo" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i0e-fD-rwV">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nRL-Op-THe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EDp-Zz-9kJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1287" y="82"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AC_iOS_GeneralKnowledgeQuiz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eKD-La-Xsu">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="0.2068439640410959" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="questionCell" textLabel="Gqm-EI-BV7" detailTextLabel="Fys-fh-blE" style="IBUITableViewCellStyleSubtitle" id="6iA-a4-bW1">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6iA-a4-bW1" id="9lA-Qa-jXr">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gqm-EI-BV7">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fys-fh-blE">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="0.18238976883561644" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eKD-La-Xsu" secondAttribute="trailing" id="M0f-PU-vte"/>
+                            <constraint firstItem="eKD-La-Xsu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QjV-N9-RjY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="eKD-La-Xsu" secondAttribute="bottom" id="UlI-af-aT6"/>
+                            <constraint firstItem="eKD-La-Xsu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vUJ-qr-FRj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="eHR-H5-uEJ">
+                        <barButtonItem key="backBarButtonItem" title="Questions" id="AdR-Iy-vEf"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="eKD-La-Xsu" id="1YH-PQ-VSS"/>
+                        <segue destination="Wzc-2L-itF" kind="show" id="HYv-Pg-tJG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Detailed View Controller-->
+        <scene sceneID="8QY-CV-E1f">
+            <objects>
+                <viewController id="Wzc-2L-itF" customClass="DetailedViewController" customModule="AC_iOS_GeneralKnowledgeQuiz" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dra-2D-xhz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-hb-6lh">
+                                <rect key="frame" x="0.0" y="257.5" width="375" height="216"/>
+                            </pickerView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LmK-hK-MuY">
+                                <rect key="frame" x="0.0" y="458" width="375" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="yhQ-Yl-QHi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question: Something Will Be Asked Here! " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gdy-Qj-SXS">
+                                <rect key="frame" x="0.0" y="142" width="375" height="45"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="0.24093000856164384" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="BGR-mO-Ccq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="0.1251337756849315" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="LmK-hK-MuY" firstAttribute="trailing" secondItem="LsM-gB-Ijq" secondAttribute="trailing" id="2FN-4V-ruj"/>
+                            <constraint firstItem="Cjy-hb-6lh" firstAttribute="trailing" secondItem="LsM-gB-Ijq" secondAttribute="trailing" id="2w5-WH-cih"/>
+                            <constraint firstItem="Gdy-Qj-SXS" firstAttribute="top" secondItem="LsM-gB-Ijq" secondAttribute="top" constant="78" id="6Lt-QF-qZz"/>
+                            <constraint firstItem="LmK-hK-MuY" firstAttribute="top" secondItem="Cjy-hb-6lh" secondAttribute="bottom" constant="-15.5" id="BG7-Kp-7xd"/>
+                            <constraint firstItem="Cjy-hb-6lh" firstAttribute="leading" secondItem="LsM-gB-Ijq" secondAttribute="leading" id="Su2-o1-58Z"/>
+                            <constraint firstItem="Cjy-hb-6lh" firstAttribute="top" secondItem="Gdy-Qj-SXS" secondAttribute="bottom" constant="70.5" id="Vcs-AC-9sL"/>
+                            <constraint firstItem="LmK-hK-MuY" firstAttribute="leading" secondItem="LsM-gB-Ijq" secondAttribute="leading" id="cpL-bM-sHU"/>
+                            <constraint firstItem="Gdy-Qj-SXS" firstAttribute="trailing" secondItem="LsM-gB-Ijq" secondAttribute="trailing" id="q69-p3-75l"/>
+                            <constraint firstItem="Cjy-hb-6lh" firstAttribute="centerY" secondItem="LsM-gB-Ijq" secondAttribute="centerY" id="sDB-HW-ekt"/>
+                            <constraint firstItem="LsM-gB-Ijq" firstAttribute="bottom" secondItem="LmK-hK-MuY" secondAttribute="bottom" constant="164" id="sIo-G4-qgo"/>
+                            <constraint firstItem="Gdy-Qj-SXS" firstAttribute="leading" secondItem="LsM-gB-Ijq" secondAttribute="leading" id="w4k-9F-Ttj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LsM-gB-Ijq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jwt-LM-gId" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="284" y="81.409295352323838"/>
         </scene>
     </scenes>
 </document>
